# bsl-console

./: .gitignore  README.md  pyproject.toml
info/: BSL_proto.txt
src/bsl_console/: __init__.py  bootloader.py  bootstrap.py  cli.py  protocol.py  targets.py  transport.py
tests/: test_bootloader.py  test_bootstrap.py  test_cli.py  test_protocol.py  test_protocol_sectors.py
